adds in google fonts

--- a/02-css-bootstrap/01-Activities/07-CSSTypography/Unsolved/styles.css
+++ b/02-css-bootstrap/01-Activities/07-CSSTypography/Unsolved/styles.css
@@ -1,13 +1,16 @@
 .bold {
     font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .font-size-paragraph {
     font-size: 24px;
+    font-family: 'Almarai', sans-serif;
 }
 
 .line-height {
     line-height: 50px;
+    font-family: 'Turret Road', cursive;
 }
 
 
